put comments inline with files